<resources>
    <string name="app_name">InfosafeCSI-onMove (Android)</string>

    // Welcome page texts
    <string name="welcome_text">"Responsible Chemical Management at your finger tips"</string>
    <string name="welcome_button">Connect</string>
    <string name="welcome_image">Welcome background image</string>

    //Email check page texts
    <string name="login_askemail">Please enter your registered email:</string>
    <string name="login_continue">Continue</string>
    <string name="login_emailchecklogo">Email Check Logo</string>

    //OTA code page texts
    <string name="login_otanotice">Your One-Time Access Code for InfosafeCSI has been sent to your registered email account. This code will expiry in 8 minutes.</string>
    <string name="login_otahint">OTA CODE</string>
    <string name="login_otalogo">OTA Logo</string>

    //Multiple client page texts
    <string name="login_mcnotice">Your email has been registered to multiple companies, please select:</string>
    <string name="login_mclogo">Multiple client Logo</string>

    // Login page texts
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>

    <string name="login_remember">Remember your password</string>
    <string name="login_logo">Login page logo</string>
    <string name="login_remBtn">Button for remember action or undo action</string>

    // Client select page texts
    <string name="client_select">Client Select</string>
    <string name="client_name">Client Name</string>


    // Search page texts
    <string name="search_logoff">Log off</string>
    <string name="search_productname">Product name</string>
    <string name="search_supplier">Supplier</string>
    <string name="search_productcode">Product code</string>
    <string name="search_barcode">Barcode</string>
    <string name="search_button">Search</string>
    <string name="search_barcodeTitle">Scan barcode to search</string>
    <string name="search_companyLogo"> Company Logo</string>
    <string name="search_checkbeforeyoupurchase">Check Before You Purchase: </string>

    // Search Table page texts
    <string name="table_pname">Product Name</string>
    <string name="table_country">Country</string>
    <string name="table_supplier">Supplier</string>
    <string name="table_unno">UNNO.:</string>
    <string name="table_unnov">unnov</string>
    <string name="table_pcode">PROD. CODE:</string>
    <string name="table_pcodev">pcodev</string>
    <string name="table_date">ISSUE DATE:</string>
    <string name="table_datev">xx/xx/xxxx</string>

    <string name="table_Img1">ghsImg1</string>
    <string name="table_Img2">ghsImg2</string>
    <string name="table_Img3">ghsImg3</string>
    <string name="table_Img4">ghsImg4</string>
    <string name="table_Img5">ghsImg5</string>

    <string name="table_notifiy">All data has been loaded.</string>
    <string name="table_viewdetailsbtn">View Details</string>
    <string name="table_toolbartitle">Search Result</string>

    // Check Before You Purchase Product name table page texts
    <string name="cbyp_toobartitle">Search Result</string>
    <string name="cbyp_sortbutton">Sort</string>
    <string name="cbyp_searchbar">Search Product Name</string>
    <string name="cbyp_noofsupplier">No. Of Supplier(s): </string>
    <string name="cbyp_productname">Product Name: </string>
    <string name="cbyp_sorting">Sorting your list:</string>
    <string name="cbyp_sorting_by">By:</string>
    <string name="cbyp_sorting_as">As:</string>
    <string name="cbyp_sorting_product_name">Product Name</string>
    <string name="cbyp_sorting_no_of_supplier">No. Of Supplier(s)</string>
    <string name="cbyp_sorting_l_to_s">Largest to Smallest</string>
    <string name="cbyp_sorting_s_to_l">Smallest to Largest</string>
    <string name="cbyp_sorting_a_to_z">A to Z</string>
    <string name="cbyp_sorting_z_to_a">Z to A</string>

    //Check Before You Purchase Supplier table page texts
    <string name="cbyps_toobartitle">Search Result</string>

    <string name="cbyps_sorting">Sorting your list:</string>
    <string name="cbyps_supplier">Supplier</string>
    <string name="cbyps_sorting_by">By:</string>
    <string name="cbyps_sorting_as">As:</string>
    <string name="cbyps_sorting_product_name">Product Name</string>
    <string name="cbyps_sorting_no_of_product">No. Of Product(s)</string>
    <string name="cbyps_sorting_issue_date">Iusse Date</string>
    <string name="cbyps_sorting_l_to_s">Largest to Smallest</string>
    <string name="cbyps_sorting_s_to_l">Smallest to Largest</string>
    <string name="cbyps_sorting_a_to_z">A to Z</string>
    <string name="cbyps_sorting_z_to_a">Z to A</string>
    <string name="cbyps_sorting_l_to_o">Latest to Oldest</string>
    <string name="cbyps_sorting_o_to_l">Oldest to Latest</string>

    //SDSView main page texts
    <string name="sdsm_sdsbtn">SDS</string>
    <string name="sdsm_prevbtn">Preview</string>
    <string name="sdsm_ghsbtn">GHS</string>
    <string name="sdsm_dgbtn">DG</string>
    <string name="sdsm_faidbtn">F.AID</string>

    <string name="sdsm_ghstitle">GHS CLASSFICATION</string>
    <string name="sdsm_haztitle">HAZARD STATEMENT(S)</string>
    <string name="sdsm_prectitle">PRECAUTIONARY STATEMENT(S)</string>
    <string name="sdsm_transtitle">TRANSPORT INFORMATION</string>
    <string name="sdsm_pstitle">POISONS SCHEDULE</string>

    <string name="sdsm_ghsvalue">ghs value</string>
    <string name="sdsm_hazvalue">haz value</string>
    <string name="sdsm_precvalue">prec value</string>
    <string name="sdsm_tivalue">ti value</string>
    <string name="sdsm_psvalue">ps value</string>

    <string name="sdsm_ghscImg1">ghscImg1</string>
    <string name="sdsm_ghscImg2">ghscImg2</string>
    <string name="sdsm_ghscImg3">ghscImg3</string>
    <string name="sdsm_ghscImg4">ghscImg4</string>
    <string name="sdsm_ghscImg5">ghscImg5</string>

    <string name="sdsm_tiImg">tiImg</string>
    <string name="sdsm_tisubImg1">tisubImg1</string>
    <string name="sdsm_tisubImg2">tisubImg2</string>

    //Preview GHS information texts
    <string name="ghs_ctitle">CLASSIFICATION</string>
    <string name="ghs_ghstitle">GHS CLASSIFICATION</string>
    <string name="ps_general">&lt;b>General:&lt;/b></string>
    <string name="ps_prevention">&lt;b>Prevention:&lt;/b></string>
    <string name="ps_response">&lt;b>Response:&lt;/b></string>
    <string name="ps_storage">&lt;b>Storage:&lt;/b></string>
    <string name="ps_disposal">&lt;b>Disposal:&lt;/b></string>


    //Preview TI information texts
    <string name="ti_unno"> &lt;b>UNNO&lt;/b></string>
    <string name="ti_dgclass"> &lt;b>DG CLASS&lt;/b></string>
    <string name="ti_haz"> &lt;b>HAZCHEM CODE&lt;/b></string>
    <string name="ti_packgrp"> &lt;b>PACKAGING GROUP&lt;/b></string>
    <string name="ti_psn"> &lt;b>PROPER SHIPPING NAME&lt;/b></string>

    //TI information texts
    <string name="ti_roadBtn">ROAD</string>
    <string name="ti_seaBtn">SEA</string>
    <string name="ti_airBtn">AIR</string>

    <string name="tis_unno">UNNO</string>
    <string name="tis_class">CLASS</string>
    <string name="tis_subr">S.RISK</string>
    <string name="tis_PG">PG</string>
    <string name="tis_psntitle">PROPER SHIPPING NAME</string>
    <string name="tis_symboltitle">SYMBOL</string>
    <string name="tis_emstitle">EMS</string>
    <string name="tis_mptitle">MARINE POLLUTANT</string>
    <string name="tis_haztitle">HAZCHEM CODE</string>
    <string name="tis_epgtitle">EPG NUMBER</string>
    <string name="tis_inotitle">IERG NUMBER</string>
    <string name="tis_pmtitle">PACKAGING METHOD</string>
    <string name="tis_dgImg">TI single page DG Img</string>
    <string name="tis_subImg1">TI single page sub Img1</string>
    <string name="tis_subImg2">TI single page sub Img2</string>

    //First AID texts
    <string name="fa_inhtitle">INHALATION</string>
    <string name="fa_ingtitle">INGESTION</string>
    <string name="fa_skintitle">SKIN</string>
    <string name="fa_eyetitle">EYE</string>
    <string name="fa_faftitle">FIRST AID FACILITIES</string>
    <string name="fa_atd">ADVICE TO DOCTOR</string>

    //View SDS texts
    <string name="sds_toolbartitle">VIEW SDS</string>

    //SDS main page toolbar title
    <string name="preview_title">PREVIEW</string>
    <string name="ghs_title">GHS</string>
    <string name="dg_title">DG</string>
    <string name="faid_title">FIRST AID</string>

    //Scroll to view more
    <string name="scroll_text">Scroll down to view more</string>
    <string name="scroll_image">Scroll down image</string>

    //OCR texts
    <string name="scan_image">Scan image</string>
    <string name="ocr_tips">Tips: Please ensure the image is in highest quality and only leave relevant text on the image for best text recognizing.</string>
    <string name="ocr_scan_text">Scan text</string>
    <string name="ocr_scan_text_hint">No Text Recognised.</string>
    <string name="ocr_rescan_button">Rescanning</string>
    <string name="ocr_search_button">Search</string>


    //Empty text
    <string name="empty_hint"></string>


</resources>
