<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/loginbackground">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="382dp"
        android:layout_height="69dp"
        app:srcCompat="@drawable/csi_logo"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="68dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/login_button"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="332dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="262dp" />

    <EditText
        android:id="@+id/editText2"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="194dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_remember"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="306dp" />
</androidx.constraintlayout.widget.ConstraintLayout>